# ask-harder

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  heroku.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 579f5fdae7c5_sessions_table.py  97080a95aa1a_users_table.py  a1b2c3d4e5f6_interview_tables.py  a7b8c9d0e1f2_interview_soft_delete.py  b7c8d9e0f1a2_turn_sequence.py  c3d4e5f6a7b8_skill_scores_table.py  c9d0e1f2a3b4_turn_is_skip.py  d4e5f6a7b8c9_session_type.py  e5f6a7b8c9d0_practice_tag.py  f6a7b8c9d0e1_user_resume.py
backend/evals/: __init__.py  conftest.py  test_judge.py
backend/evals/fixtures/q01_project_walkthrough/: answer_bad.txt  answer_key.json  answer_mediocre.txt  answer_strong.txt  question.json
backend/evals/fixtures/q02_db_indexing/: answer_bad.txt  answer_key.json  answer_mediocre.txt  answer_strong.txt  question.json
backend/evals/fixtures/q03_rate_limiter/: answer_bad.txt  answer_key.json  answer_mediocre.txt  answer_strong.txt  question.json
backend/evals/results/: anthropic.json  mock.json
backend/src/app/: __init__.py  config.py  main.py  methodology.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_db_models.py  test_deepseek_common.py  test_intake.py  test_interview_sse_format.py  test_interview_stream.py  test_interviewer_common.py  test_interviews.py  test_judge.py  test_judge_common.py  test_llm_contracts.py  test_methodology.py  test_rate_limit.py  test_skills.py  test_verdict.py
(+94 files in other folders)
