[project]
name = "ask-harder-backend"
version = "0.1.0"
description = "ask-harder API — FastAPI backend for the AI mock interviewer"
readme = "README.md"
authors = [
    { name = "Rahat-Kabir", email = "105872616+Rahat-Kabir@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.1",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "openai>=2.41.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

# package dir is src/app (import name `app`), not src/askharder_backend
[tool.uv.build-backend]
module-name = "app"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "stability: judge stability evals — 3 runs per answer, the expensive suite (deselect with -m 'not stability')",
]
